fix alignment

--- a/client/styles/components/buttons.styl
+++ b/client/styles/components/buttons.styl
@@ -28,10 +28,9 @@
 .button-story, .button-answer
   background Green
   border-bottom 2px solid #4F932F
-  width 270px
+  width 250px
 
 .button-answer
-  width 250px
   display block
   margin 1em auto
   background White
