--- a/client/styles/components/cards.styl
+++ b/client/styles/components/cards.styl
@@ -1,7 +1,7 @@
 .card
   background White
   padding 15px
-  width 280px
+  width 275px
   height 420px
   overflow hidden
   border-radius 3px
