--- a/client/styles/components/flip.styl
+++ b/client/styles/components/flip.styl
@@ -2,7 +2,7 @@
   -webkit-perspective: 1000
   -moz-perspective: 1000
   perspective: 1000
-  width 310px
+  width 305px
   height 420px
   margin 30px auto
 
